Fix classpath, run and remove test configuration